5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1798_2569.log
== TEST (2019-06-10 14:50:13) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = x/size(x)
for i in range(x):
d = sqrt((x - m)**2/(size(x) - 1
print(s, 3)
-- ERROR:
File "XXXX", line 6
    d = sqrt((x - m)**2/(size(x) - 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:50:26) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = x/size(x)
for i in range(x):
d = sqrt((x - m)**2/(size(x) - 1
print(d, 3)
-- ERROR:
File "XXXX", line 6
    d = sqrt((x - m)**2/(size(x) - 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:50:31) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = x/size(x)
for i in range(x):
	d = sqrt((x - m)**2/(size(x) - 1
print(d, 3)
-- ERROR:
File "XXXX", line 7
    print(d, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:52:28) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = x/size(x)

i = 0
for i in range(x):
	d = sqrt((x - m)**2/(size(x) - 1
		i = i + 1
print(d, 3)
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:52:36) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = x/size(x)

i = 0
for i in range(x):
	d = sqrt((x - m)**2/(size(x) - 1
	i = i + 1
print(d, 3)
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:02:31) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = sum(x)/size(x)

for i in range(x):
	j = j + (x[i] - m)**2

d = sqrt(j/(x-1))
print(d,3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:03:05) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = sum(x)/size(x)

for i in range(size(x)):
	j = j + (x[i] - m)**2

d = sqrt(j/(x-1))
print(d,3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:03:15) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = sum(x)/size(x)

for i in range(size(x)):
	j = j + (x[i] - m)**2

d = sqrt(j/(x-1))
print(d,3)
-- EXECUTION TIME:
1.19716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 7, in <module>
    j = j + (x[i] - m)**2
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:03:17) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = sum(x)/size(x)

for i in range(size(x)):
	j = j + (x[i] - m)**2

d = sqrt(j/(x-1))
print(d,3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:03:32) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = sum(x)/size(x)
j=0
for i in range(size(x)):
	j = j + (x[i] - m)**2

d = sqrt(j/(x-1))
print(d,3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:04:16) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = sum(x)/size(x)
j=0
for i in range(size(x)):
	j = j + (x[i] - m)**2

d = sqrt(j/(size(x)-1))
print(d,3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:04:38) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = sum(x)/size(x)
j=0
for i in range(size(x)):
	j = j + (x[i] - m)**2

d = sqrt(j/(size(x)-1))
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:04:48) 
-- CODE:
from numpy import*

x = array(eval(input("x:")))
m = sum(x)/size(x)
j=0
for i in range(size(x)):
	j = j + (x[i] - m)**2

d = sqrt(j/(size(x)-1))
print(round(d,3))
-- EXECUTION TIME:
1.14525
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
